--- a/src/components/Pages/MainPage.module.scss
+++ b/src/components/Pages/MainPage.module.scss
@@ -1,96 +1,231 @@
-.mainPage {
-  height: 100vh;
+@import '../../assets/styles/colors.scss';
+@import '../../assets/styles/dimensions.scss';
+
+$mobile-padding: 16px;
+$tablet-padding: 32px;
+$desktop-padding: 64px;
+
+.pageContainer {
   display: grid;
   grid-template-rows: 90px 1fr 72px;
+  height: 100vh;
+}
+
+.header {
+  padding: $mobile-padding;
+
+  .title {
+    display: flex;
+    justify-content: space-between;
+
+    .subject {
+      color: $main-accent;
+      font-weight: bold;
+      font-size: 30px;
+    }
+  }
+
+  .location {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 8px;
+
+    .subject {
+      color: $gray-dark;
+      font-size: 14px;
+      margin: 0;
+    }
+
+    .locationIcon {
+      margin-right: 7.5px;
+      width: 15px;
+    }
+  }
 }
 
 .footer {
+  padding: $mobile-padding;
   background-color: #151b1f;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-}
 
-.phone {
-  font-size: 13px;
-  color: #0ec261;
-  margin-top: 16px;
-  margin-bottom: 4px;
-}
+  .phone {
+    font-size: 13px;
+    color: $main-accent;
+    text-decoration: none;
 
-.companyInfo {
-  font-size: 13px;
-  color: #eee;
-  margin-top: 4px;
+    &:hover {
+      color: $gray-light;
+    }
+
+    &:active {
+      color: white;
+    }
+  }
+
+  .companyInfo {
+    font-size: 13px;
+    color: $gray-light;
+    margin-top: 8px;
+  }
 }
 
 .promoHeader {
   text-align: left;
+  margin-top: 10vh;
 
   .title {
-    font-size: 10vw;
+    font-size: 32px;
     font-weight: bold;
-    margin-left: 16px;
     margin-bottom: 0px;
+    padding: 0 $mobile-padding;
   }
 
   .subtitle {
-    font-size: 10vw;
+    font-size: 32px;
     font-weight: bold;
-    color: #0ec261;
-    margin-left: 16px;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    color: $main-accent;
+    padding: 0 $mobile-padding;
   }
 
   .text {
-    font-size: 5.625vw;
+    font-size: 18px;
     font-weight: lighter;
-    color: #999999;
-    margin-top: 16px;
-    margin-left: 16px;
-    margin-bottom: 32px;
+    color: $gray-dark;
+    padding: $mobile-padding;
   }
 
   .action {
-    width: 100vw;
+    margin-top: $mobile-padding;
+    width: 100%;
     height: 50px;
     border: none;
     background: linear-gradient(90deg, #0ec261 2.61%, #039f67 112.6%);
     background-blend-mode: darken;
     font-size: 18px;
-    color: #eee;
+    color: white;
+
+    &:hover {
+      filter: brightness(90%);
+    }
+
+    &:active {
+      filter: brightness(80%);
+    }
   }
 }
 
-.headerTop {
-  display: flex;
-  justify-content: space-between;
+.sliderStub {
+  display: none;
+}
 
-  p {
-    margin: 0;
-    color: #0ec261;
-    font-weight: bold;
-    font-size: 30px;
+@media (min-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    padding: $tablet-padding;
+
+    .title {
+      align-items: center;
+
+      .menuButton {
+        display: none;
+      }
+    }
+
+    .location {
+      align-items: center;
+      margin: 0;
+    }
+  }
+
+  .promoHeader {
+    padding: $tablet-padding;
+
+    .title {
+      font-size: 70px;
+      padding: 0;
+    }
+
+    .subtitle {
+      font-size: 70px;
+      padding: 0;
+    }
+
+    .text {
+      font-size: 26px;
+      margin-top: 34px;
+      padding: 0;
+    }
+
+    .action {
+      margin-top: 60px;
+      width: 250px;
+      height: 48px;
+      border-radius: 8px;
+    }
+  }
+
+  .footer {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    padding: 18px $tablet-padding 38px $tablet-padding;
+
+    .phone {
+      color: $main-black;
+
+      &:hover,
+      &:active {
+        color: $main-accent;
+      }
+    }
+
+    .companyInfo {
+      color: $main-black;
+    }
   }
 }
 
-.headerBottom {
-  display: flex;
-  justify-content: end;
-  margin-top: 8px;
-
-  p {
-    color: #999999;
-    font-size: 14px;
-    margin: 0;
+@media (min-width: 1024px) {
+  .pageContainer {
+    grid-template-rows: 90px 1fr 72px;
+    grid-template-columns: $desktop-min-main-width 1fr;
+    grid-template-areas:
+      'header slider'
+      'main slider'
+      'footer slider';
   }
 
-  img {
-    margin-right: 7.5px;
+  .sliderStub {
+    grid-area: slider;
+    display: block;
+    background-color: $gray-dark;
+  }
+
+  .header {
+    grid-area: header;
+  }
+
+  .promoHeader {
+    grid-area: main;
+  }
+
+  .footer {
+    grid-area: footer;
   }
 }
 
-.header {
-  padding: 16px;
+@media (min-width: 1440px) {
+  .pageContainer {
+    grid-template-columns: $desktop-main-width 1fr;
+  }
+  .promoHeader,
+  .footer,
+  .header {
+    padding-left: $desktop-padding;
+    padding-right: $desktop-padding;
+  }
 }
