V-01 refactored after review

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -71,6 +71,14 @@
 
     .socLink {
       margin-right: 18px;
+
+      .socIcon {
+        fill: white;
+
+        &:hover {
+          fill: $main-accent;
+        }
+      }
     }
   }
 
