--- a/src/index.scss
+++ b/src/index.scss
@@ -49,8 +49,8 @@ button {
 
 body {
   margin: 0;
-  font-family: 'Roboto';
-  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
