--- a/src/assets/styles/dimensions.scss
+++ b/src/assets/styles/dimensions.scss
@@ -2,3 +2,7 @@ $tablet-sidebar-width: 86px;
 $desktop-sidebar-width: 64px;
 $desktop-min-main-width: 549px;
 $desktop-main-width: 688px;
+
+$mobile-padding: 16px;
+$tablet-padding: 32px;
+$desktop-padding: 64px;
