--- a/src/assets/styles/dimensions.scss
+++ b/src/assets/styles/dimensions.scss
@@ -3,6 +3,8 @@ $desktop-sidebar-width: 64px;
 $desktop-min-main-width: 549px;
 $desktop-main-width: 688px;
 
+$header-height: 90px;
+
 $mobile-padding: 16px;
 $tablet-padding: 32px;
 $desktop-padding: 64px;
