--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 @mixin button-states {
   &:hover {
     filter: brightness(90%);
@@ -5,5 +7,10 @@
 
   &:active {
     filter: brightness(80%);
+  }
+
+  &:disabled {
+    background: $gray-light;
+    filter: brightness(100%);
   }
 }
