--- a/src/components/Pages/MainPage/MainPage.module.scss
+++ b/src/components/Pages/MainPage/MainPage.module.scss
@@ -1,43 +1,11 @@
-@import '../../assets/styles/colors.scss';
-@import '../../assets/styles/dimensions.scss';
-@import '../../assets/styles/mixins.scss';
+@import '../../../assets/styles/colors.scss';
+@import '../../../assets/styles/dimensions.scss';
+@import '../../../assets/styles/mixins.scss';
 
 .pageContainer {
   display: grid;
-  grid-template-rows: 90px 1fr 72px;
+  grid-template-rows: auto 1fr 72px;
   height: 100vh;
-}
-
-.header {
-  padding: $mobile-padding;
-
-  .title {
-    display: flex;
-    justify-content: space-between;
-
-    .subject {
-      color: $main-accent;
-      font-weight: 700;
-      font-size: 30px;
-    }
-  }
-
-  .location {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 8px;
-
-    .subject {
-      color: $gray-dark;
-      font-size: 14px;
-      margin: 0;
-    }
-
-    .locationIcon {
-      margin-right: 7.5px;
-      width: 15px;
-    }
-  }
 }
 
 .footer {
@@ -93,44 +61,12 @@
     padding: $mobile-padding;
   }
 
-  .action {
+  .actionWrapper {
     margin-top: $mobile-padding;
-    width: 100%;
-    height: 50px;
-    border: none;
-    background: linear-gradient(90deg, #0ec261 2.61%, #039f67 112.6%);
-    background-blend-mode: darken;
-    font-size: 18px;
-    color: white;
-
-    @include button-states;
   }
-}
-
-.sliderStub {
-  display: none;
 }
 
 @media (min-width: 768px) {
-  .header {
-    display: flex;
-    justify-content: space-between;
-    padding: $tablet-padding;
-
-    .title {
-      align-items: center;
-
-      .menuButton {
-        display: none;
-      }
-    }
-
-    .location {
-      align-items: center;
-      margin: 0;
-    }
-  }
-
   .main {
     display: flex;
     align-items: center;
@@ -155,11 +91,8 @@
       padding: 0;
     }
 
-    .action {
+    .actionWrapper {
       margin-top: 60px;
-      width: 250px;
-      height: 48px;
-      border-radius: 8px;
     }
   }
 
@@ -187,22 +120,12 @@
 
 @media (min-width: 1024px) {
   .pageContainer {
-    grid-template-rows: 90px 1fr 72px;
+    grid-template-rows: auto 1fr 72px;
     grid-template-columns: $desktop-min-main-width 1fr;
     grid-template-areas:
       'header slider'
       'main slider'
       'footer slider';
-  }
-
-  .sliderStub {
-    grid-area: slider;
-    display: block;
-    background-color: $gray-dark;
-  }
-
-  .header {
-    grid-area: header;
   }
 
   .promoHeader {
@@ -219,8 +142,7 @@
     grid-template-columns: $desktop-main-width 1fr;
   }
   .promoHeader,
-  .footer,
-  .header {
+  .footer {
     padding-left: $desktop-padding;
     padding-right: $desktop-padding;
   }
