--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './assets/styles/colors.scss';
+
 @font-face {
   font-family: 'Roboto';
   src: url('./assets/fonts/Roboto-Light.eot');
@@ -51,6 +53,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
+  color: $main-black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
