--- a/src/components/Pages/OrderPage/ui/CarCard/CarCard.module.scss
+++ b/src/components/Pages/OrderPage/ui/CarCard/CarCard.module.scss
@@ -34,8 +34,8 @@
     align-items: flex-end;
 
     .img {
-      width: 256px;
-      height: 116px;
+      max-width: 256px;
+      max-height: 150px;
     }
   }
 }
