--- a/src/components/Pages/OrderPage/OrderPage.module.scss
+++ b/src/components/Pages/OrderPage/OrderPage.module.scss
@@ -16,8 +16,15 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  
+
+  .tabWrapper {
+    flex-grow: 1;
+  }
+
   .orderInfo {
+    flex-shrink: 0;
+    padding-bottom: 48px;
+
     .content {
       display: none;
     }
@@ -34,6 +41,7 @@
 
     .orderInfo {
       text-align: left;
+      padding-bottom: $tablet-padding + 32px;
 
       .actionWrapper {
         text-align: left;
@@ -76,6 +84,10 @@
     .tabWrapper {
       padding: $tablet-padding $tablet-padding 0 0;
       flex-grow: 1;
+
+      .tabContentWrapper {
+        max-width: 736px;
+      }
     }
 
     .orderInfo {
