--- a/src/components/Pages/OrderPage/OrderPage.module.scss
+++ b/src/components/Pages/OrderPage/OrderPage.module.scss
@@ -2,14 +2,37 @@
 @import '../../../assets/styles/colors.scss';
 
 .pageContainer {
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
 .navContainer {
-  display: none;
+  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+
+  .nav {
+    line-height: 32px;
+    text-align: left;
+    padding: 0 $mobile-padding;
+    border: 1px solid $gray-light;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-left: none;
+
+    .navItemWrapper {
+      margin-left: 16px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+
+    .navArrow {
+      margin-left: 16px;
+    }
+  }
 }
 
 .main {
@@ -18,6 +41,7 @@
   flex-grow: 1;
 
   .tabWrapper {
+    padding-top: 16px;
     flex-grow: 1;
   }
 
@@ -36,9 +60,34 @@
 }
 
 @media (min-width: 768px) {
+  .navContainer {
+    border-top: 1px solid $gray-light;
+    border-bottom: 1px solid $gray-light;
+    .row {
+      display: inline-block;
+    }
+
+    .nav {
+      margin-left: $tablet-padding;
+      border: none;
+      padding: 0;
+
+      .row {
+        margin-left: 16px;
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
   .main {
     padding: $tablet-padding $tablet-padding 0 $tablet-padding;
 
+    .tabWrapper {
+      padding: 0;
+    }
     .orderInfo {
       text-align: left;
       padding-bottom: $tablet-padding + 32px;
@@ -52,31 +101,6 @@
 }
 
 @media (min-width: 1024px) {
-  .navContainer {
-    display: flex;
-    border-bottom: 1px solid $gray-light;
-    border-top: 1px solid $gray-light;
-    width: 100%;
-
-    .nav {
-      line-height: 32px;
-      text-align: left;
-      margin-left: $tablet-padding;
-
-      .navItemWrapper {
-        margin-left: 16px;
-
-        &:first-child {
-          margin-left: 0;
-        }
-      }
-
-      .navArrow {
-        margin-left: 16px;
-      }
-    }
-  }
-
   .main {
     flex-direction: row;
     padding-top: 0;
