--- a/src/components/commonUi/Button/Button.module.scss
+++ b/src/components/commonUi/Button/Button.module.scss
@@ -1,15 +1,34 @@
 @import '../../../assets/styles/mixins.scss';
 
 .action {
-  width: 100%;
+  position: relative;
   height: 50px;
   border: none;
   background: linear-gradient(90deg, #0ec261 2.61%, #039f67 112.6%);
   background-blend-mode: darken;
-  font-size: 18px;
   color: white;
+  font-size: 18px;
 
   @include button-states;
+
+  .link {
+    position: absolute;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.rounded {
+  border-radius: 8px;
+}
+
+@media (max-width: 767.99px) {
+  .expandable {
+    width: 100% !important;
+    border-radius: 0;
+  }
 }
 
 .canceling {
@@ -18,12 +37,7 @@
 
 @media (min-width: 768px) {
   .action {
-    width: 250px;
-    height: 48px;
     border-radius: 8px;
-
-    &.orderPage {
-      width: 287px;
-    }
+    height: 48px;
   }
 }
