--- a/src/components/commonUi/Button/Button.module.scss
+++ b/src/components/commonUi/Button/Button.module.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/mixins.scss';
 
 .action {
+  cursor: pointer;
   position: relative;
   height: 50px;
   border: none;
@@ -10,6 +11,12 @@
   font-size: 18px;
 
   @include button-states;
+
+  &:disabled {
+    .link {
+      display: none;
+    }
+  }
 
   .link {
     position: absolute;
