F-03-04 refactored after review

--- a/src/components/Pages/OrderPage/OrderMenu/OrderMenu.module.scss
+++ b/src/components/Pages/OrderPage/OrderMenu/OrderMenu.module.scss
@@ -13,6 +13,7 @@
   right: 0;
   transform: translateY(calc(100% - 32px));
   transition: all 0.2s;
+  z-index: 200;
 
   .menuToggler {
     .icon {
