--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -10,6 +10,7 @@
   left: 0;
   transform: translateX(-200%);
   transition: all 0.2s;
+  z-index: 999;
 
   &.active {
     transform: translateX(0);
